--- a/admin/index.html
+++ b/admin/index.html
@@ -10,10 +10,10 @@
 <div class="alert alert-danger" role="alert">
     <h1>Mercado Central</h1>
   </div>
-	<!--boton que redirecciona a puestos/index.php-->
-	<button onclick="window.location.href='./puestos/index.php'">Administrar Puestos</button>
+	<!--boton que redirecciona a puestos/index.html-->
+	<button onclick="window.location.href='./puestos/index.html'">Administrar Puestos</button>
 	<!--boton que redirecciona a sectores/index.php-->
-	<button onclick="window.location.href='./sectores/index.php'">Administrar Sectores</button>
+	<button onclick="window.location.href='./sectores/index.html'">Administrar Sectores</button>
 	
 </body>
 
