--- a/admin/indexFinFormularioAdm.html
+++ b/admin/indexFinFormularioAdm.html
@@ -21,6 +21,6 @@
     </div>
   </div>
  
-  <button onclick="window.location.href='../menu_admin.php'">Volver al Menú Principal del Administrador</button>
+  <button onclick="window.location.href='../menu_admin.html'">Volver al Menú Principal del Administrador</button>
 </body>
 </html>
