--- a/clientes/indexFinFormularioCli.html
+++ b/clientes/indexFinFormularioCli.html
@@ -18,6 +18,6 @@
     <br><br>
     </div>
   </div>
-  <button onclick="window.location.href='../index.php'">Volver al Menú Principal</button>
+  <button onclick="window.location.href='../index.html'">Volver al Menú Principal</button>
 </body>
 </html>
