--- a/clientes/index_puestos.html
+++ b/clientes/index_puestos.html
@@ -61,14 +61,14 @@ $cliente = $_SESSION['nombre_usuario'];*/
 			</tbody>
 		</table>
 		<br>
-		<!--boton que redirecciona a index_formularioCliente.php - Aqui nos muestra el Formulario de Alquiler-->
-		<button onclick="window.location.href='index_formularioCliente.php'">Alquilar</button><br>
+		<!--boton que redirecciona a index_formularioCliente.html - Aqui nos muestra el Formulario de Alquiler-->
+		<button onclick="window.location.href='index_formularioCliente.html'">Alquilar</button><br>
 		<br>
         <!--boton para volver a la vista de los sectores-->
-        <button onclick="window.location.href='./index_sectores.php'">Volver</button>
+        <button onclick="window.location.href='./index_sectores.html'">Volver</button>
 
 		<!--boton para cerrar sesion-->
-		<button onclick="window.location.href='../cerrar_sesion.php'">Salir</button>
+		<button onclick="window.location.href='../cerrar_sesion.html'">Salir</button>
 	</div><br>
 			<div class="contenedor">      		 
         		<div class="card-body1">
