--- a/clientes/index_sectores.html
+++ b/clientes/index_sectores.html
@@ -54,14 +54,14 @@ require("../conexion/conexion.php");
 			</tbody>
 		</table> <br>
 
-		<!--boton que redirecciona a puestos/indexPuestos.php y muestra los puestos del secto, con el id del sector-->
-		<button onclick="window.location.href='./index_puestos.php'">Consultar Puestos</button><br>
+		<!--boton que redirecciona a puestos/indexPuestos.html y muestra los puestos del secto, con el id del sector-->
+		<button onclick="window.location.href='./index_puestos.html'">Consultar Puestos</button><br>
 		<br>
         <!--boton para cerrar sesion-->
-        <button onclick="window.location.href='../menu_clientes.php'">Volver</button>
+        <button onclick="window.location.href='../menu_clientes.html'">Volver</button>
 
 		<!--boton para cerrar sesion-->
-		<button onclick="window.location.href='../cerrar_sesion.php'">Salir</button>
+		<button onclick="window.location.href='../cerrar_sesion.html'">Salir</button>
 	</div><br>
 			<div class="contenedor">      		 
         		<div class="card-body1">
