--- a/puestos/agregar_puesto.html
+++ b/puestos/agregar_puesto.html
@@ -75,7 +75,7 @@ $res = mysqli_query($conn,$sectores);
     	$resultado=mysqli_query($conn,$sql);
     	if($resultado){
     		echo "<script>alert('Puesto agregado correctamente')</script>";
-    		echo '<script>location.href="index.php"</script>';
+    		echo '<script>location.href="index.html"</script>';
     	}else {
     		echo "<script>alert('error')</script>";
     	}
