--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h3>Inicio de Sesión</h3>
         <img src="imagenes/MercadoLogo.jpg" class="car-img-top" /><br>
           <div class="card-body1">
-              <form name="login" action="validar.php" method="POST">
+              <form name="login" action="validar.html" method="POST">
        			  Usuario: <input type="text" name="usuario"><br><br>
        			  Clave: <input type="password" name="clave"><br><br>
        			  <input type="submit" name="ingresar" value="Ingresar">
